--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
+<html>
+	<head>
+			<title></title>
+			<link rel="stylesheet" href="estilos.css">
+	</head>
+	<body>
 
-<h1> titulo </h1>
+		<ul>
+			<li><a class="active" href="#Beneficios"> Beneficios del deporte </a></li>
+			<li><a href="#OyP"> Olimpiadas y Paralimpiadas </a></li>
+			<li><a href="#Raros"> Deportes raros </a></li>
+			<li><a href="#Records"> World records </a></li>
+			<li><a class="#Extremos" href="#home"> Deportes extremos </a></li>
+			<li><a href="#Famosos"> Deportistas más famosos </a></li>
+			<li><a href="#España"> España y el deporte </a></li>
+		</ul>
+
+	</body>
+</html>
