--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<body>
 
 		<ul>
-			<li><a class="active" href="#Beneficios"> Beneficios del deporte </a></li>
-			<li><a href="#OyP"> Olimpiadas y Paralimpiadas </a></li>
-			<li><a href="#Raros"> Deportes raros </a></li>
-			<li><a href="#Records"> World records </a></li>
-			<li><a class="#Extremos" href="#home"> Deportes extremos </a></li>
-			<li><a href="#Famosos"> Deportistas más famosos </a></li>
-			<li><a href="#España"> España y el deporte </a></li>
+			<li><a class="active" href="#beneficios.html"> Beneficios del deporte </a></li>
+			<li><a href="#oyp.html"> Olimpiadas y Paralimpiadas </a></li>
+			<li><a href="#raros.html"> Deportes raros </a></li>
+			<li><a href="#records.html"> World records </a></li>
+			<li><a class="#extremos.html" href="#home"> Deportes extremos </a></li>
+			<li><a href="#famosos.html"> Deportistas más famosos </a></li>
+			<li><a href="#españa.html"> España y el deporte </a></li>
 		</ul>
 
 	</body>
