--- a/oyp.html
+++ b/oyp.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-			<title>Maneskin</title>
+			<title>oyp</title>
 			<link rel="stylesheet" href="estilos.css">
 	</head>
 </html>
