--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 
 		<ul>
-			<li><a class="active" href="#beneficios.html"> Beneficios del deporte </a></li>
+			<li><a class="active" href="beneficios.html"> Beneficios del deporte </a></li>
 			<li><a href="#oyp.html"> Olimpiadas y Paralimpiadas </a></li>
 			<li><a href="#raros.html"> Deportes raros </a></li>
 			<li><a href="#records.html"> World records </a></li>
