--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<li><a href="#oyp.html"> Olimpiadas y Paralimpiadas </a></li>
 			<li><a href="#raros.html"> Deportes raros </a></li>
 			<li><a href="#records.html"> World records </a></li>
-			<li><a class="#extremos.html" href="#home"> Deportes extremos </a></li>
+			<li><a href="#extremos.html"> Deportes extremos </a></li>
 			<li><a href="#famosos.html"> Deportistas más famosos </a></li>
 			<li><a href="#españa.html"> España y el deporte </a></li>
 		</ul>
