--- a/records.html
+++ b/records.html
@@ -1,1 +1,248 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deportes</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header>
+        <div class="container">
+            <nav class="nav">
+                <div class="menu-toggle">
+                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-times"></i>
+                </div>
+                <a href="#" class="logo">+SPORTS</a>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Deportes extremos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Deportes raros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">World records</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Dportes de España</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
+    <section class="hero" id="hero">
+        <div class="container">
+            <h2 class="h2-sub">
+                <span class="fil">B</span>ienvenidos a
+            </h2>
+            <h1 class="head">World records</h1>
+            <div class="he-des">
+                <a href="#" class="btn cta-btn">Saber mas</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="dis-sto">
+        <div class="container">
+            <div class="res-info">
+                <div>
+                    <img src="images/record.jfif" alt="">
+                </div>
+            
+                <div class="res-des pad-rig">
+                    <div class="global">
+                        <h2 class="h2-sub">
+                            <span class="fil">D</span>escubre
+                        </h2>
+                        <h1 class="head hea-dark">Récord de asistencia en un partido femenino
+                        </h1>
+                        <div class="circle">
+                            <i class="fas fa-circle"></i>
+                        </div>
+                    </div>
+                    <p>
+                        El 30 de marzo el estadio del Camp Nou batió el récord de asistencia a un
+                         partido de fútbol femenino en la vuelta de cuartos de final de la Women 's 
+                         Champions League entre el FC Barcelona y el Real Madrid. El partido consiguió
+                          reunir a 91.553 espectadores y llenó casi un 90% del estadio. Guinness World 
+                          Records reconoció el récord mediante un tweet en su cuenta oficial.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <section class="taste bt">
+        <div class="container">
+            <div class="global">
+                <h2 class="h2-sub">
+                    <span class="fil">W</span>orld records
+                </h2>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="disco">
+        <div class="container">
+            <div class="res-info">
+                <div class="res-des">
+                    <div class="global">
+                        <h2 class="h2-sub">
+                            <span class="fil">E</span>xplora
+                        </h2>
+                        <h1 class="head hea-dark">Récord Guinness de los 100 metros
+                        </h1>
+                        <div class="circle">
+                            <i class="fas fa-circle"></i>
+                        </div>
+                    </div>
+                    <p>
+                        Una de las grandes leyendas del deporte marcó un antes y un después
+                         en la historia de los Récord Guinness: Usain Bolt, la leyenda de los
+                        100 metros. Todo el mundo conoce este nombre ya que destaca por ser
+                        uno de los deportistas más importantes de los Juegos Olímpicos. 
+                        Logró el Récord Guinness al conseguir hacer los 100 metros lisos en
+                         9,58 segundos. Nadie en la historia ha podido superarlo y muchos se 
+                        han quedado a las puertas de alcanzar al ex deportista olímpico, 
+                        llevándolo al recuerdo de millones de personas.
+   
+                    </p>
+                </div>
+                <div class="image-group pad-rig">
+                    <img src="images/usain bolt 1.jpg" alt="">
+                    <img src="images/usain bolt 2.jpg" alt="">
+                    <img src="images/usain bolt 3.jpg" alt="">
+                    <img src="images/usain bolt 4.jpg" alt="">
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="pb bt">
+        <div class="container">
+            <div class="global">
+                <h2 class="h2-sub">
+                    <span class="fil">W</span>orld records
+                </h2>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="res-info">
+
+                <div class="image-group">
+                    <img src="images/max verstappe 1.jfif" alt="">
+                    <img src="images/max verstappe 2.jfif" alt="">
+                </div>
+                <div class="res-des pad-rig">
+                    <div class="global">
+                        <h2 class="h2-sub">
+                            <span class="fil">A</span>verigua
+                        </h2>
+                        <h1 class="head hea-dark">Piloto más joven gana Fórmula 1</h1>
+                        <div class="circle">
+                            <i class="fas fa-circle"></i>
+                        </div>
+                    </div>
+                    <p>
+                        Max Verstappen se situó como el piloto más joven en ganar una carrera del Campeonato
+                         del Mundo de Fórmula 1. Obtuvo su primera victoria el 15 de mayo de 2016, en el Gran
+                        Premio de España (Montmeló) con 18 años y 228 días. También se ha convertido en uno
+                         de los pilotos más jóvenes en ganar la F1. Un récord que ha marcado historia y no se
+                         podrá superar tan fácilmente.
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+
+                <div class="footer-content-about">
+                    <h4>Nosotros</h4>
+                    <div class="circle">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                    <p>Somos un grupo de adolescentes que ha creado una pagina web con la finalidad
+                        de enseñar a nuestro publico todo el mundo de los deportes y su gran variedad,
+                        enseñar algo mas aparte de los deportes tipicos e informar sobre ello.
+                    </p>
+                </div>
+                <div class="footer-div">
+                    <div class="social-media">
+                        <h4>Siguenos</h4>
+                        <ul class="social-icons">
+                            <li>
+                                <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/DonaldTrump/"><i class="fab fa-facebook-square"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.pinterest.es/"><i class="fab fa-pinterest"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://es.linkedin.com/?src=go-pa&trk=sem-ga_campid.18146679037_asid.140850334975_crid.619061882347_kw.linkedin_d.c_tid.kwd-148086543_n.g_mt.e_geo.20267&mcid=6968657504633266178&cid=&gclid=Cj0KCQiAsoycBhC6ARIsAPPbeLsJEQOwVbFr5gc6u5jxDioCzVWes0zZEsjQ07K7WcWbcl9CZz3QBkYaAhUpEALw_wcB&gclsrc=aw.ds"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                    </div>
+                    <div>
+                        <h4>informanos</h4>
+                        <form action="" class="news-form">
+                            <input type="text" class="news-input"
+                            placeholder="Email"
+                            >
+                            <button class="news-btn" type="submit">
+                                <i class="fas fa-envelope"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+    <script>
+
+        const selectElement = function(element) {
+            return document.querySelector(element);
+        }
+
+
+        let menuToggle = selectElement('.menu-toggle');
+        let body = selectElement('body');
+
+        menuToggle.addEventListener('click', function(){
+            body.classList.toggle('open');
+        })
+
+    </script>
+
+    
+</body>
+</html>
 
