--- a/extremos.html
+++ b/extremos.html
@@ -1,1 +1,247 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deportes</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <header>
+        <div class="container">
+            <nav class="nav">
+                <div class="menu-toggle">
+                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-times"></i>
+                </div>
+                <a href="#" class="logo">+SPORTS</a>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Deportes extremos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Deportes raros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">World records</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Dportes de España</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
+    <section class="hero" id="hero">
+        <div class="container">
+            <h2 class="h2-sub">
+                <span class="fil">B</span>ienvenidos a
+            </h2>
+            <h1 class="head">Deportes extremos</h1>
+            <div class="he-des">
+                <a href="#" class="btn cta-btn">Saber mas</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="dis-sto">
+        <div class="container">
+            <div class="res-info">
+                <div>
+                    <img src="images/paraca.jfif" alt="">
+                </div>
+            
+                <div class="res-des pad-rig">
+                    <div class="global">
+                        <h2 class="h2-sub">
+                            <span class="fil">D</span>escubre
+                        </h2>
+                        <h1 class="head hea-dark">Paracaidismo
+                        </h1>
+                        <div class="circle">
+                            <i class="fas fa-circle"></i>
+                        </div>
+                    </div>
+                    <p>
+                        El paracaidismo es la técnica de lanzamiento
+                         de seres humanos u objetos desde cierta altura
+                        usando un paracaídas para amortiguar el impacto 
+                        del aterrizaje.Al considerarse un deporte extremo,
+                        trae consigo muchos riesgos que pueden poner en
+                        grave peligro la vida. Sin embargo, estos se
+                        reducen tomando en cuenta todas las medidas de
+                        seguridad pertinentes antes de practicarlo.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <section class="taste bt">
+        <div class="container">
+            <div class="global">
+                <h2 class="h2-sub">
+                    <span class="fil">D</span>eportes extremos
+                </h2>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="disco">
+        <div class="container">
+            <div class="res-info">
+                <div class="res-des">
+                    <div class="global">
+                        <h2 class="h2-sub">
+                            <span class="fil">E</span>xplora
+                        </h2>
+                        <h1 class="head hea-dark">Parkour
+                        </h1>
+                        <div class="circle">
+                            <i class="fas fa-circle"></i>
+                        </div>
+                    </div>
+                    <p>
+                        La base de este deporte es la capacidad motriz del individuo.
+                         Los practicantes son llamados traceurs si son hombres y traceurses
+                          en el caso de las mujeres. El objetivo es moverse de un punto a 
+                          otro realizando acrobacias y saltos en los edificios.
+   
+                    </p>
+                </div>
+                <div class="image-group pad-rig">
+                    <img src="images/parkour 2.jfif" alt="">
+                    <img src="images/parkour 3.jfif" alt="">
+                    <img src="images/parkour 4.png" alt="">
+                    <img src="images/parkour 5.jfif" alt="">
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="pb bt">
+        <div class="container">
+            <div class="global">
+                <h2 class="h2-sub">
+                    <span class="fil">D</span>eportes extremos
+                </h2>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="res-info">
+
+                <div class="image-group">
+                    <img src="images/alpinismo.jfif" alt="">
+                    <img src="images/alpinismo 2.jfif" alt="">
+                </div>
+                <div class="res-des pad-rig">
+                    <div class="global">
+                        <h2 class="h2-sub">
+                            <span class="fil">A</span>verigua
+                        </h2>
+                        <h1 class="head hea-dark">Alpinismo</h1>
+                        <div class="circle">
+                            <i class="fas fa-circle"></i>
+                        </div>
+                    </div>
+                    <p>
+                        El alpinismo es la más antigua y completa
+                         de las modalidades deportivas de montaña. Podría definirse
+                          como la acción de subir montañas, pero siempre por afán de
+                           superación, como respuesta a un impulso personal distinto
+                            en cada uno o por el placer de alcanzar una cima y observar
+                             el terreno que se abre ante los ojos.
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+
+                <div class="footer-content-about">
+                    <h4>Nosotros</h4>
+                    <div class="circle">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                    <p>Somos un grupo de adolescentes que ha creado una pagina web con la finalidad
+                        de enseñar a nuestro publico todo el mundo de los deportes y su gran variedad,
+                        enseñar algo mas aparte de los deportes tipicos e informar sobre ello.
+                    </p>
+                </div>
+                <div class="footer-div">
+                    <div class="social-media">
+                        <h4>Siguenos</h4>
+                        <ul class="social-icons">
+                            <li>
+                                <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/DonaldTrump/"><i class="fab fa-facebook-square"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.pinterest.es/"><i class="fab fa-pinterest"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://es.linkedin.com/?src=go-pa&trk=sem-ga_campid.18146679037_asid.140850334975_crid.619061882347_kw.linkedin_d.c_tid.kwd-148086543_n.g_mt.e_geo.20267&mcid=6968657504633266178&cid=&gclid=Cj0KCQiAsoycBhC6ARIsAPPbeLsJEQOwVbFr5gc6u5jxDioCzVWes0zZEsjQ07K7WcWbcl9CZz3QBkYaAhUpEALw_wcB&gclsrc=aw.ds"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                    </div>
+                    <div>
+                        <h4>informanos</h4>
+                        <form action="" class="news-form">
+                            <input type="text" class="news-input"
+                            placeholder="Email"
+                            >
+                            <button class="news-btn" type="submit">
+                                <i class="fas fa-envelope"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+    <script>
+
+        const selectElement = function(element) {
+            return document.querySelector(element);
+        }
+
+
+        let menuToggle = selectElement('.menu-toggle');
+        let body = selectElement('body');
+
+        menuToggle.addEventListener('click', function(){
+            body.classList.toggle('open');
+        })
+
+    </script>
+
+    
+</body>
+</html>
