--- a/españa.html
+++ b/españa.html
@@ -35,6 +35,7 @@
 
 <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #303030;"></path></svg></div>
     <section class="content sau">
+	 <div class="nose">
         <h2 class="title"> La esgrima</h2> 
         <p> La esgrima sería, al parecer, la única disciplina olímpica cuyo origen se haya en nuestro país.
             Aunque existe un posible antecedente de un bajorrelieve egipcio del siglo XII a. C en el que aparece una competición con armas, no fue hasta el siglo XVI cuando los duelos de espadachines tomaron fuerza.
@@ -54,6 +55,7 @@
             </div>
           
         </div>
+	    </div>
         <br><br>
     </section>
     <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C75.62,207.72 271.49,-49.98 503.94,98.19 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: #303030;"></path></svg></div>
@@ -66,6 +68,7 @@
         El objetivo del juego es el siguiente: derribar toda la hilera de bolos con el lanzamiento de la bola y, a su vez, lograr que el mayor número de bolos superen la línea del 10 o incluso que uno alcance la valla, en cuyo caso el jugador se adjudica el juego.
 
 Cada jugador dispone de 3 lanzamientos. Por cada bolo derribado que no logre superar la línea del 10, el jugador se adjudica 1 punto, si la supera, se adjudica 10 puntos. El jugador o equipo que más puntos sume gana. Cada partida consta de rondas, las cuales están compuestas, cada una, de 5 juegos.
+<div class"nose">
 <div class="box-container">
 <div class="box">
     <p> Material:</p>
@@ -80,6 +83,7 @@ Cada jugador dispone de 3 lanzamientos. Por cada bolo derribado que no logre sup
     <img src="bolos2111.jpg" height="230" width="250">
 </div>
 </div>
+								</div>
 
 					<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 			<a name="hola">
