--- a/españa.html
+++ b/españa.html
@@ -1,7 +1,7 @@
 <html>
 		<title> PÁGINA DEPORTES ESPAÑA </title>
 		<Body> 
-<link rel="stylesheet" href="Raros.css">
+<link rel="stylesheet" href="estilos.css">
 			<FONT FACE="Trebuchet MS">
 			<Center>
 <ul>
