--- a/raros.html
+++ b/raros.html
@@ -1,1 +1,110 @@
 
+<html lang="en">
+<head>
+
+</head>
+<link rel="stylesheet" href="estilos.css">
+<body>
+
+    <div class="head">
+        <ul>
+            <li><a class="active" href="index.html"> Deportes </a></li>
+            <li><a href="#beneficios.html"> Beneficios del deporte </a></li>
+            <li><a href="#oyp.html"> Olimpiadas y Paralimpiadas </a></li>
+            <li><a href="#raros.html"> Deportes raros </a></li>
+            <li><a href="#records.html"> World records </a></li>
+            <li><a href="#extremos.html"> Deportes extremos </a></li>
+            <li><a href="#famosos.html"> Deportistas más famosos </a></li>
+            <li><a href="#españa.html"> España y el deporte </a></li>
+        </ul>
+    </div>
+    <header class="content header">
+        <h2 class="title"> Carrera del queso</h2>
+        <p> El Cooper's Hill Cheese-Rolling and Wake,
+            mejor conocido en español como Festival del queso rodante,
+            es un evento anual que se celebra en el distrito de Gloucester (Inglaterra, Reino Unido)
+            cada último lunes de mayo. Se trata de una carrera donde los competidores deben atrapar
+            un queso Gloucester arrojado desde una colina inclinada de unos 182 metros, lo que se 
+            traduce en caídas por la velocidad que puede llegar a alcanzar.
+            <br>
+            Aunque en origen se trata de una festividad local de Brockworth, un pequeño pueblo del 
+            condado de Gloucestershire, con el paso del tiempo ha ganado fama internacional y hoy cuenta con miles de visitantes.
+            </p>
+        <a href="https://www.brainlang.com/blog/festival-del-queso-rodante.html" class="btn">Saber más</a>
+    </header>
+    <section class="content sau">
+        <h2 class="title"> Extreme Ironing</h2> 
+        <p> Según su inventores se trata de combinar 
+            “la emoción de una actividad extrema al aire libre con la satisfacción de una camisa bien planchada”.
+            Como se ve, los participantes de este “planchado extremo” deben demostrar su habilidad para dejarse
+            una camisa “niquelada” en las situaciones más inverosímiles. El padre del invento es un tal Phil Shaw, 
+             eximio ciudadano de Leicester (Inglaterra), trabajador de una fábrica de prendas de punto y aficionado 
+            a la escalada, que en 1997 decidió combinar las dos actividades en el garaje de su casa.Dos años después, durante una Nochevieja en Nueva Zelanda, 
+            conoció a un grupo de mochileros alemanes a los que le contó la historia y les entusiasmó tanto que le ayudaron a divulgar por la red el nuevo deporte. 
+            Por supuesto, sí, se trata de una broma; un guiño divertido al Ironman, el campeonato de triatlón más duro y exigente del mundo, solo apto para supermanes y superwoman de verdad.
+             Pero la cosa cuajó y ya hay hasta campeonatos del mundo de Extreme Ironing. El último lo ganó un tipo que se planchó los calzoncillos en plena Antártida. 
+            Algunos deportes con los que se ha juntado esta corriente:
+        </p>
+        <div class="box-container">
+            <div class="box">
+                <h3> Paracaidismo</h3>
+                <div class="dropdown">
+                    <span class="texto">VER</span>
+                    <div class="dropdown-content">
+                        <img src="paracaidismo.jpeg" >
+                    </div>
+                  </div>
+            </div>
+            <div class="box">
+                <h3> Escalda</h3>
+                <div class="dropdown">
+                    <span class="texto">VER</span>
+                    <div class="dropdown-content">
+                        <img src="escalada.jpeg" >
+                    </div>
+                  </div>
+            </div>
+            <div class="box">
+                <h3> Bici </h3>
+                <div class="dropdown">
+                    <span class="texto">VER</span>
+                    <div class="dropdown-content">
+                        <img src="bici.jpeg" >
+                    </div>
+                  </div>
+            </div>
+
+        </div>
+    </section>
+    <section class="content price"> 
+      <article>
+        <h2 class="title">Rugby Subacuático.</h2>
+        <p> Este deporte, el único que se juega realmente en 3 Dimensiones. Se inició a principio de los años 60
+            en la República Federal Alemana como recurso de algunos centros de buceo, quienes en búsqueda de mantenerse
+             en forma en la época de invierno inventaron y desarrollaron este deporte.
+             Actualmente el Rugby Subacuático se practica en un gran número de países y se llevan a cabo torneos nacionales e internacionales, 
+             incluyendo Campeonatos continentales y mundiales femeninos, masculinos y de equipos juveniles.
+        </p>
+        <a href="https://www.ecured.cu/Rugby_subacu%C3%A1tico" class="btn">Saber más</a>
+      </article>  
+    </section>
+   
+        
+        <section class="content about">
+        <h2 class="title">Tirón de Orejas </h2>
+        <p> En Alaska, existe un ancestral deporte, llamado el duelo de las orejas. 
+            Competencia que se remonta a los inicios de la cultura Inuit, nombre común 
+            para los distintos pueblos indígenas que habitan en las regiones árticas de América del Norte y parte de Siberia. 
+            Es decir, los mejor conocidos como esquimales, los cuales dan un gran valor a la fuerza en estos cartílagos.
+             Los contendientes se sientan enfrentados, con las piernas entrecruzadas, y se unen las orejas cruzadas (derecha y derecha, por ejemplo) con una goma de 60 centímetros.
+             La competición consiste en tirar el uno del otro hasta que uno de los dos se rinda o grite de dolor, en tres asaltos.
+        </p>
+        <div class="dropdown">
+            <span class="texto">Ver el deporte</span>
+            <div class="dropdown-content">
+                <a href="https://www.youtube.com/watch?v=bCX3UlCaVZo&t=2s"> <img src="tiron.png" width="270" height="200"> </a> 
+            </div>
+          </div>
+    </section>
+  
+</html>
