--- a/index.html
+++ b/index.html
@@ -1,19 +1,123 @@
+<!DOCTYPE html>
 <html>
-	<head>
-			<title></title>
-			<link rel="stylesheet" href="estilos.css">
-	</head>
-	<body>
+<head>
+    <title>+Deportes</title>
+    <link rel="stylesheet" href="prueba.css">
+</head>
+<body>
+    <center>
+    <ul>
+    <li><a class="active" href="index.html"> Deportes </a></li>
+    <li><a href="#beneficios.html"> Beneficios del deporte </a></li>
+    <li><a href="#oyp.html"> Olimpiadas y Paralimpiadas </a></li>
+    <li><a href="#raros.html"> Deportes raros </a></li>
+    <li><a href="#records.html"> World records </a></li>
+    <li><a href="#extremos.html"> Deportes extremos </a></li>
+    <li><a href="#famosos.html"> Deportistas más famosos </a></li>
+    <li><a href="#españa.html"> España y el deporte </a></li>
+    </ul>
 
-		<ul>
-			<li><a class="active" href="beneficios.html"> Beneficios del deporte </a></li>
-			<li><a href="#oyp.html"> Olimpiadas y Paralimpiadas </a></li>
-			<li><a href="#raros.html"> Deportes raros </a></li>
-			<li><a href="#records.html"> World records </a></li>
-			<li><a href="#extremos.html"> Deportes extremos </a></li>
-			<li><a href="#famosos.html"> Deportistas más famosos </a></li>
-			<li><a href="#españa.html"> España y el deporte </a></li>
-		</ul>
-
-	</body>
-</html>
+    <section class="portada" id="portada">
+        <div class="content">
+            <h1> +Deportes </h1>
+            <p>
+            La página web estrella encargada de recoger los temas más interesantes sobre deporte,
+            siempre al día y con la información más contrastada y actualizada. </p>
+        </div>
+    </section>
+<br> <br> <br>
+    <section class="beneficios">
+              <h1 class="heading">Beneficios del deporte</h1>
+              <h3 class="title"> La vida activa, con entrenamientos repartidos a lo
+                largo de la semana, es una rutina apta para todo el mundo. No solo
+                los deportistas necesitan pasar por el gimnasio para poder mejorar
+                sus marcas. Las personas de a pie también requieren de un mínimo de
+                actividad física con el fin de potenciar su salud. Los niños, los
+                adultos y las personas mayores necesitan hacer deporte. Tanto es así,
+                que los médicos aseguran que el ejercicio físico es fundamental para
+                poder llevar una vida sana. No solo a nivel físico, sino también en
+                el plano que ver con la salud mental. El deporte ayuda a mejorar nuestra
+                condición física, pero también potencia la memoria, la concentración
+                y la agilidad mental.
+              </h3>
+              <br><br><br>
+              <a class="boton-personalizado" href="#beneficios.html"> Saber más</a>
+     </section>
+<br> <br> <br>
+     <section class="oyp">
+               <h1 class="heading">Olimpiadas y Paralimpiadas</h1>
+               <h3 class="title">Tanto Olimpiadas Especiales como los Paraolímpicos
+                 son organizaciones separadas y reconocidas por el COI, el Comité
+                 Olímpico Internacional. Comparten otras similitudes: ambas se enfocan
+                 en deportes para atletas con discapacidad, y son gestionadas por
+                 organizaciones internacionales sin fines de lucro. Sin embargo,
+                 difieren en tres áreas principales: La categoría de discapacidades de
+                 los atletas con los que trabajan; los criterios y filosofía bajo el
+                 cual participan los atletas; y la estructura de sus respectivas organizaciones.
+               </h3>
+               <br><br><br>
+               <a class="boton-personalizado" href="#oyp.html"> Saber más</a>
+      </section>
+<br> <br> <br>
+      <section class="raros">
+                <h1 class="heading">Deportes raros</h1>
+                <h3 class="title">Has jugado futbol, baloncesto, tenis, y hasta a
+                  las canicas con tus amigos de la colonia, pero de seguro nunca te
+                  has puesto a pensar en los deportes más extraños del mundo de los
+                  cuales nunca has escuchado hablar y que seguro tampoco has practicado en tu vida.
+                  Conoce algunos de los deportes más extraños que se practican a lo largo
+                  del planeta y que seguro nunca te hubieras imaginado su existencia.
+                </h3>
+                <br><br><br>
+                <a class="boton-personalizado" href="#raros.html"> Saber más</a>
+       </section>
+<br> <br> <br>
+       <section class="records">
+                 <h1 class="heading">World Records</h1>
+                 <h3 class="title">Algo que nos deja el deporte, a parte de emociones
+                   fuertes y algún que otro enfado, son momentos dignos de ser enmarcados,
+                   momentos que se escribirán no solo en la memoria de los amantes del
+                   deporte sino también en libros, noticias, reportajes… y marcarán un
+                   antes y un después en la historia del deporte mundial.
+                 </h3>
+                 <br><br><br>
+                 <a class="boton-personalizado" href="#records.html"> Saber más</a>
+        </section>
+<br> <br> <br>
+        <section class="extremos">
+                  <h1 class="heading">Deportes extremos</h1>
+                  <h3 class="title">Si eres de los aventados que no temen a las alturas
+                    ni a exponerse a sufrir lesiones graves, te gustarán todos estos deportes
+                    extremos. La adrenalina que se siente al practicarlos es una experiencia
+                    única, de hecho es la droga más potente que el cuerpo segrega de manera
+                    natural cuando te encuentras en peligro o en estado de alerta. Aquí
+                    hablaremos de los deportes más extremos del mundo.
+                  </h3>
+                  <br><br><br>
+                  <a class="boton-personalizado" href="#extremos.html"> Saber más</a>
+         </section>
+<br> <br> <br>
+         <section class="famosos">
+                   <h1 class="heading">Famosos en el deporte</h1>
+                   <h3 class="title">Los deportistas más famosos del mundo son aquellos
+                     que ganan más títulos, que ostentan más récords y que están presentes
+                     en las principales ligas y competencias internacionales. Todos los
+                     conocemos, incluso aunque no seamos fanáticos del deporte. Los deportistas
+                     más famosos del mundo son considerados ‘súper estrellas’ y tienen seguidores
+                     en los cinco continentes. ¿Quieres saber quiénes son?
+                   </h3>
+                   <br><br><br>
+                   <a class="boton-personalizado" href="#famosos.html"> Saber más</a>
+          </section>
+<br> <br> <br>
+          <section class="españa">
+                    <h1 class="heading">España y el deporte</h1>
+                    <h3 class="title">El fútbol es indudablemente el deporte rey en nuestro país.
+                      El running, la actividad física más practicada por los españoles.
+                      Baloncesto, ciclismo, tenis, natación… Muchos son los deportes que
+                      practicamos de manera habitual y son conocidos por todos, pero quizá
+                      no conocías estos otros deportes tradicionales de diferentes partes de nuestra geografía que aquí te relatamos.
+                    </h3>
+                    <br><br><br>
+                    <a class="boton-personalizado" href="#españa.html"> Saber más</a>
+           </section>
